# optsuite-c

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/: FindPROPACK.cmake
contrib/: make.inc
data/: X.mat
example/: block.cpp  fft.cpp  log.cpp  opt.cpp  random.cpp  readmat.cpp  svd.cpp  tictoc.cpp
include/OptSuite/: config.h  config.h.in  core_macro_n.h  core_n.h
include/OptSuite/Base/: factorized_mat.h  functional.h  mat_array.h  mat_op.h  mat_wrapper.h  model.h  shared_spmat.h  solver.h  spmat_wrapper.h  variable.h
include/OptSuite/Interface/: matlab.h
include/OptSuite/LinAlg/: fftw_wrapper.h  lansvd.h  rng_wrapper.h
include/OptSuite/Utils/: base.h  logger.h  optionchecker.h  optionlist.h  stopwatch.hpp  str_format.h  tictoc.h
optpy/: CMakeLists.txt  __init__.py.in  core_n_pybind.cpp
optpy/base/: CMakeLists.txt  __init__.py.in  functional_pybind.cpp  solver_pybind.cpp
scripts/: logistic_regression.py
src/Base/: functional.cpp  mat_array.cpp  model.cpp  shared_spmat.cpp  solver.cpp
src/Interface/: matlab.cpp  pyoptsuite.cpp
src/LinAlg/: fftw_wrapper.cpp  lansvd.cpp  rng_wrapper.cpp
src/Utils/: logger.cpp  optionchecker.cpp  optionlist.cpp
unittest/: Axmb_L0NormProj.cpp  Axmb_L1NormProj.cpp  Axmb_L2.cpp  Axmb_L2NormProj.cpp  Axmb_Linf.cpp  Axmb_LinfNormProj.cpp  Axmb_Nuclear.cpp  CMakeLists.txt  grad_unittest.cpp  group_lasso.cpp  lasso.cpp  logistic_regression_l1.cpp  logistic_regression_l2.cpp  solver_unittest.cpp
unittest_py/: CMakeLists.txt  core_n_test.py.in  functional_test.py.in  mnist.py.in
